# ruth

./: .flake8  .gitignore  .gitmodules  404.html  Dockerfile  README.md  benchmark_gw.py  cProfiler_result_  config.json  distributed-traffic-sim.py  extend-traffic-sim-benchmark.py  index.html  mkdocs.yml  preprocess_benchmark_data.py  requirements.txt  run.sh  setup.py  single-node-traffic-sim.py  sitemap.xml  speed_profiles.py
.github/workflows/: deploy_docs.yml  docker-image.yml
benchmarks/antarex/: INPUT-cars_10.csv  INPUT-cars_12000.csv  INPUT-cars_2.csv  INPUT-cars_2000.csv
benchmarks/hello-world/: README.md  aggregated_fcd.csv  od-matrix.csv  prob-profile-for-2021-06-20T23:59:00+02:00--2021-06-27T23:59:00+02:00.mem  traffic-flow.csv  vehicles-state.parquet
benchmarks/hello-world/time_range_histograms/: period-2021-06-20T23:59:00+02:00--2021-06-27T23:59:00+02:00.data
benchmarks/od-matrices/: INPUT-od-matrix-10-vehicles-town-resolution.parquet  INPUT-od-matrix-10-vehicles.parquet  prob-profile-for-2021-06-20T23:59:00+02:00--2021-06-27T23:59:00+02:00.mem
benchmarks/prague/: 2K_15052023_2_whole_prague.parquet  2K_23012024_prague.parquet  speed_config.csv
binding/: CMakeLists.txt  README.md  test.py
binding/dataset/: OD_matrix.csv
binding/src/: bindings.cpp  globalview.hpp  globalview_bindings.cpp  lib.cpp  lib.hpp  main.cpp  ruthlib.h
binding/video/: CMakeLists.txt  common_types.hpp  main.cpp  main_omp.cpp  merge_h5.cpp  pipeline.hpp  stage1_loading.hpp  stage2_aggregation.hpp  stage3_output.hpp  test_aggregation.cpp
clib/: CMakeLists.txt  binding.py  routing.cpp  routing.h
data_preparation/: index.html
docker/arlib/: Dockerfile  README.md
docker/comm/: Dockerfile
docker/multinode/: Dockerfile
docker/usage-with-docker/: index.html
docs/: README.md  data_preparation.md  installation.md  tools.md  work_with_sim_output.md
docs/docker/: Dockerfile  usage-with-docker.md
docs/images/: ruth.afdesing
flowmap/: analysis.py  animation.py  app.py  info.py  input.py  zoom.py
flowmap/flowmapframe/: speeds.py  zoom.py
installation/: index.html
it4i/: pbs-run.sh  pbs-run2.sh
ruth/: car.py  distsim.py  everestsim.py  fcd_history.py  globalview.py  globalview_indexed.py  globalview_wrapper.py  log.py  losdb.py  metaclasses.py  pandasdataclasses.py  preprocessing.py  utils.py  vehicle.py  worker_analysis.py
ruth/data/: border.py  cz.py  geopoint.py  hdf5_writer.py  hdf_stream_writer.py  map.py  segment.py
ruth/flowmap/: .gitignore  README.md  analysis.py  animation.py  app.py  ax_settings.py  info.py  input.py  plot_dask.py  requirements.txt  zoom.py
ruth/flowmap/flowmap/: analysis.py  time_unit.py
ruth/flowmap/flowmap/flowmapframe/: plot.py
ruth/flowmap/flowmapframe/: preprocessing.py  speeds.py
ruth/mpi_comm/: distributor.py
ruth/simulator/: __init__.py  common.py  kernels.py  perflog.py  ptdr.py  queues.py  route.py  routeranking.py  segment.py  simulation.py  singlenode.py  singlenode2.py
ruth/speed-profiles/: speed_profiles.py
ruth/tools/: README.md  check_pickle.py  combineodmatrix.py  create_GPS_from_fcd.py  extend-traffic-sim-benchmark.py  floreon_preprocess.py  globalview2aggregatedfcd.py  odmatrix2simulatorinput.py  preprocessbenchmarkdata.py  simulator.py  simulator_conf.py  speed_profiles.py  splitsegmentid.py  trafficflow2odmatrix.py  vizglobalview.py
ruth/zeromq/: README.md  bench.py  bench_working.py  distributed.py  ex_client.py  ex_worker.py  requirements.txt  run.py  visualizer.py
ruth/zeromq/src/: client.py  utils.py  worker.py
search/: search_index.json
tests/: conftest.py  test_advance_vehicle.py  test_advance_vehicles_with_queues.py  test_generate_fcds.py  test_get_vehicle_speed.py  test_globalview.py  test_globalview_cpp.py  test_hdf_stream_writer.py  test_kernels.py  test_map.py  test_move_on_segment.py  test_move_on_segment_edge_cases.py  test_queues_manager.py  test_singlenode.py  test_vehicle.py  test_x_deterministic.py
tools/: extend-traffic-sim-benchmark.py  index.html  preprocessbenchmarkdata.py  simulator.py  splitsegmentid.py  trafficflow2odmatrix.py  vizglobalview.py
work_with_sim_output/: index.html
